--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="assets/images/icons8-rock-and-roll-hand-32.png" rel="shortcut icon">
-  <meta name="description" content="Star wars game where a character is and must fight off the remaining characters.">
+  <meta name="description" content="Star Wars game where a character is and must fight off the remaining characters.">
   <title>Star Wars RPG Game</title>
 
   <!-- Google Fonts -->
@@ -48,32 +48,26 @@
       <div class="container">
 
         <!-- Select Your Character -->
-        <div class="row first-row">
-          <h4 class="col-12">Select Your Character</h4>
-          <div class="col-3 col-md-3">
-            <img src="http://placehold.it/150" />
-          </div>
-          <div class="col-3 col-md-3">
-            <img src="http://placehold.it/150" />
-          </div>
-          <div class="col-3 col-md-3">
-            <img src="http://placehold.it/150" />
-          </div>
-          <div class="col-3 col-md-3">
-            <img src="http://placehold.it/150" />
-          </div>
+        <h4>Select Your Character</h4>
+        <div class="row first-row" id="select-character">
+
         </div><!-- .first-row -->
 
         <!-- Enemies Availablee To Attack -->
-        <div class="row">
-          <h4 class="col-12">Enemies Available To Attack</h4>
+        <h4>Enemies Available To Attack</h4>
+        <div class="row" id="enemies">
+
         </div>
 
         <!-- Fight Section -->
-        <div class="row">
-          <h4 class="col-12">Fight Section</h4>
-          <button class="btn">Attack</button>
-          <h4 class="col-12">Defender</h4>
+        <h4>Fight Section</h4>
+        <button type="button" class="btn btn-primary" id="attack-btn" onclick="GAME.attack(this); return false;">Attack</button>
+        <h4>Defender</h4>
+        <div class="row" id="opponent">
+
+        </div>
+        <div class="row" id="attack_messages">
+          
         </div>
 
       </div>
@@ -120,12 +114,6 @@
 
   </footer><!-- #main-footer -->
 
-  <!-- GAME JS -->
-  <script src="assets/javascript/game.js?v=1.1.0" type="text/javascript"></script>
-  <script type="text/javascript">
-
-  </script>
-
   <!-- Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -137,6 +125,13 @@
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
 
+  <!-- GAME JS -->
+  <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
+  <script src="assets/javascript/game.js?v=1.1.0" type="text/javascript"></script>
+  <script src="assets/javascript/starwars-characters.js" type="text/javascript"></script>
+  <script type="text/javascript">
+    const ThisGame = new StarWarsGame(starwars_characters); 
+  </script>
 </body>
 
 </html>
