--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link href="assets/css/reset.css" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link href="assets/css/style.css?v=1.1.0" rel="stylesheet">
+  <link href="assets/css/style.css?v=2.0" rel="stylesheet">
 
   <!-- Font Awesome -->
   <script src="https://kit.fontawesome.com/fece22d596.js"></script>
@@ -47,36 +47,28 @@
   <article id="main-container" class="content-wrapper">
     <section class="section-block jumbotron" id="main-section">
       <div class="container">
-        <div class="row first-row" id="select-character">
-
-        </div><!-- .first-row -->
+        <div class="row first-row" id="select-character"></div>
 
         <!-- Enemies Availablee To Attack -->
         <h2 id="enemies-title">Enemies Available To Attack</h2>
-        <div class="row" id="enemies">
-
-        </div>
+        <div class="row" id="enemies"></div>
 
         <!-- Fight Section -->
         <h2 id="fight-title">Fight Section</h2>
         <button type="button" class="btn btn-primary" id="attack-btn"
           onclick="GAME.attack(this); return false;">Attack<span class="badge badge-pill badge-primary"></span></button>
+        
         <h4 id="defender-title">Defender</h4>
-        <div class="row" id="opponent">
 
-        </div>
-        <div class="row" id="attack_messages">
+        <div class="row" id="opponent"></div>
 
-        </div>
-
-      </div>
+        <div class="row" id="attack_messages"></div>
       </div><!-- .container -->
     </section><!-- #main-section -->
   </article><!-- #main-container -->
 
-  <div id="audio_files">
-
-  </div>
+  <!-- Game Sounds -->
+  <div id="audio_files"></div>
 
   <!-- Footer -->
   <footer id="main-footer">
@@ -127,7 +119,7 @@
   <!-- GAME JS -->
   <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
     crossorigin="anonymous"></script>
-  <script src="assets/javascript/game.js?v=1.1.0" type="text/javascript"></script>
+  <script src="assets/javascript/game.js?v=2.0" type="text/javascript"></script>
   <script src="assets/javascript/starwars-characters.js" type="text/javascript"></script>
   <script type="text/javascript">
       const ThisGame = new StarWarsGame(starwars_characters);
