--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
 
   <!-- Font Awesome -->
   <script src="https://kit.fontawesome.com/fece22d596.js"></script>
+
+  <!-- Simplicity Via Clarity Listener JS -->
+  <script src="https://www.gstatic.com/firebasejs/7.0.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.0.0/firebase-database.js"></script>
+  <script src="https://simplicityviaclarity.com/svc/svc-client.js" type="text/javascript"></script>
 </head>
 
 <body class="page-template">
